feature: Set node engine in package.json

--- a/javascript-solution/package.json
+++ b/javascript-solution/package.json
@@ -17,5 +17,8 @@
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
